# connect-udp-mobile

./: README.md
Kotlin/: README.md
Kotlin/UdpConnect/: settings.gradle
Kotlin/UdpConnect/app/: build.gradle
Kotlin/UdpConnect/app/src/androidTest/java/com/example/udpconnect/: ExampleInstrumentedTest.kt
Kotlin/UdpConnect/app/src/main/: AndroidManifest.xml
Kotlin/UdpConnect/app/src/main/cpp/: CMakeLists.txt  lib.hpp  native-lib.cpp
Kotlin/UdpConnect/app/src/main/res/layout/: activity_main.xml
Kotlin/UdpConnect/app/src/main/res/values/: strings.xml  themes.xml
Kotlin/UdpConnect/app/src/main/res/values-night/: themes.xml
Kotlin/UdpConnect/gradle/wrapper/: gradle-wrapper.properties
Swift/: README.md
Swift/UdpConnect/UdpConnect/: ContentView.swift  UdpConnect-Bridging-Header.h  UdpConnectApp.swift  lib-bridge.mm  lib.cpp  lib.hpp  media-lib-bridge.h  media-lib-bridge.mm  media-lib.h  media-lib.hpp  udp-lib-ios.dylib
Swift/UdpConnect/UdpConnect.xcodeproj/: project.pbxproj
Swift/UdpConnect/UdpConnectTests/: UdpConnectTests.swift
Swift/UdpConnect/UdpConnectUITests/: UdpConnectUITests.swift  UdpConnectUITestsLaunchTests.swift
Swift/lib-udp-ios/lib-udp-ios/: ContentView.swift  lib-bridge.h  lib-bridge.mm  lib-udp-ios-Bridging-Header.h  lib.hpp  lib_udp_iosApp.swift
Swift/lib-udp-ios/lib-udp-ios.xcodeproj/: project.pbxproj
Swift/lib-udp-ios/lib-udp-iosTests/: lib_udp_iosTests.swift
Swift/lib-udp-ios/lib-udp-iosUITests/: lib_udp_iosUITests.swift  lib_udp_iosUITestsLaunchTests.swift
(+2 files in other folders)
